spacing fixes

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -41,8 +41,8 @@ i.icon {
         width: 20px;
         height: 20px;
         position: absolute;
-        right: 9px;
-        top: 13px;
+        right: 10px;
+        top: 20px;
         cursor: pointer;
         display: block;
     }
